# polymarket-sim

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  admin-panel.html  claude-findings.md  pyproject.toml
data/: trades.db
src/: __main__.py  backtest.py  cli.py  config.py  correlation.py  executor.py  journal.py  limits.py  models.py  noaa.py  polymarket.py  queries.py  ratelimit.py  resolver.py  rules.py  schema.py  server.py  simulator.py  sizing.py  strategy.py
tests/: test_backtest.py  test_correlation.py  test_executor.py  test_journal.py  test_limits.py  test_noaa.py  test_polymarket.py  test_ratelimit.py  test_resolver.py  test_rules.py  test_schema.py  test_server.py  test_simulator.py  test_sizing.py  test_strategy.py
